Fixe gap in button filter2

--- a/src/app/components/header.component/header.component.scss
+++ b/src/app/components/header.component/header.component.scss
@@ -17,8 +17,8 @@ a:visited {
 }
 
 .category-dropdown {
-  //position: relative;
-  //display: inline-block;
+  position: relative;
+  display: inline-block;
   margin-left: 0.3rem;
 
 
